--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,5 @@
 version = "3.4.3"
+align.preset = most
 maxColumn = 120
 newlines.source = keep
 lineEndings = preserve
@@ -6,3 +7,4 @@ runner.dialect = scala213source3
 docstrings = JavaDoc
 docstrings.wrapMaxColumn = 80
 runner.dialect = scala3
+project.git = true
