* upgrade scalafmt * add sbt config run fork for run/runMain tasks * fix zio logging breaking changes * refactor code

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,9 +1,9 @@
-version = "3.5.1"
+version = "3.5.2"
 align.preset = most
 maxColumn = 120
 newlines.source = keep
 lineEndings = preserve
-runner.dialect = scala213source3
+runner.dialect = scala3
 docstrings = JavaDoc
 docstrings.wrapMaxColumn = 80
 runner.dialect = scala3
