* downgrade scoverage * refactor renovate bot

--- a/renovate.json
+++ b/renovate.json
@@ -1,14 +1,14 @@
 {
+  "dependencyDashboard": true,
   "automerge": true,
   "automergeType": "pr",
-  "dependencyDashboard": true,
   "labels": [
     "type: dependencies"
   ],
   "extends": [
     "config:base"
   ],
-  "schedule": [
-    "after 7pm"
-  ]
+  "sbt": {
+    "enabled": false
+  }
 }
