--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,16 @@
 {
-  "dependencyDashboard": true,
   "automerge": true,
   "automergeType": "pr",
+  "dependencyDashboard": true,
   "labels": [
     "type: dependencies"
   ],
   "extends": [
     "config:base"
+  ],
+  "ignoreDeps": [
+    "org.scoverage.sbt-scoverage",
+    "org.jmotor.sbt.sbt-dependency-updates"
   ],
   "sbt": {
     "enabled": false
