--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Setup Scala and Java
-      uses: olafurpg/setup-scala@v13
+      uses: coursier/setup-action@v1.3.0
       with:
-        java-version: zulu@1.17 
+        jvm: zulu@17 
     - name: init
       run: sbt -v --client update 
       working-directory: ${{env.WORK_DIR}}
