--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -11,10 +11,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup Scala and Java
-      uses: coursier/setup-action@v1
+    - uses: actions/setup-java@v4
       with:
-        jvm: zulu@21
+        distribution: 'zulu'
+        java-version: '21'
+    - name: Cache scala dependencies
+      uses: coursier/cache-action@v6
     - name: compile main
       run: sbt -v --client compile 
       working-directory: ${{env.WORK_DIR}}
