--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -11,12 +11,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-java@v4
+    - name: Setup JDK
+      uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
         java-version: '21'
-    - name: Cache scala dependencies
-      uses: coursier/cache-action@v6
+        cache: sbt
+    - uses: sbt/setup-sbt@v1
     - name: compile main
       run: sbt -v --client compile 
       working-directory: ${{env.WORK_DIR}}
