--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,3 +9,5 @@ docstrings = JavaDoc
 docstrings.wrapMaxColumn = 80
 runner.dialect = scala3
 project.git = true
+rewrite.rules = [RedundantBraces, RedundantParens]
+rewrite.scala3.removeOptionalBraces = true
