- add drop diacritic chars - format code

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -11,3 +11,4 @@ runner.dialect = scala3
 project.git = true
 rewrite.rules = [RedundantBraces, RedundantParens]
 rewrite.scala3.removeOptionalBraces = true
+rewrite.scala3.convertToNewSyntax = true
