add simple http stream client

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,6 +9,6 @@ docstrings = JavaDoc
 docstrings.wrapMaxColumn = 80
 runner.dialect = scala3
 project.git = true
-rewrite.rules = [RedundantBraces, RedundantParens]
+rewrite.rules = [RedundantBraces, RedundantParens, Imports]
 rewrite.scala3.removeOptionalBraces = true
 rewrite.scala3.convertToNewSyntax = false
